tmux: add mouse and resurrect

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
 set -g status-bg colour22
 set -g status-fg colour15
 set -g set-titles-string '#(whoami)::#h::#(curl ipecho.net/plain;echo)'
+set -g mouse on
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run-shell ~/tmux-resurrect/resurrect.tmux
